# real-estate-investment-mcpserver

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: api_settings.yaml
docs/: README-structure.md  design.md  requirements.md  tasks.md
src/real_estate_mcp/: server.py
src/real_estate_mcp/models/: investor_model.py  property_model.py
src/real_estate_mcp/utils/: calculations.py  market_data_client.py  optional_deps.py  price_estimation.py
tests/: __init__.py  conftest.py  test_mcp_server.py
tests/helpers/: __init__.py  shared.py
tests/test_price_estimation/: test_price_estimation.py
tests/test_tools/: test_property_analyzer.py
tests/test_utils/: test_calculations.py
