[tool.poetry]
name = "real-estate-investment-mcp"
version = "0.1.0"
description = "個人投資家向け不動産投資分析MCPサーバー"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "real_estate_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mcp = "^1.0.0"
pydantic = "^2.5.0"
pyyaml = "^6.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
python-dateutil = "^2.8.0"
geopy = "^2.3.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
